# summon-python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
.github/workflows/: ci.yml
summon_python/: github_actions.py  mypy_config.py  plugin.py  pre_commit_hooks.py  project.py  tasks.py
tests/: test_project.py
tests/test_project/package_project/: pyproject.toml
tests/test_project/single_file/: pyproject.toml
