[tool.poetry]
name = "summon_python"
version = "0.3.0"
description = "A collection of Python project-related tasks for Summon."
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8.1"
tomli = "^2.0.1"
summon-tasks = { version = "^0.3.0", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
pylint = "^2.17.6"
pylint-quotes = "^0.2.3"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8-bugbear = "^23.9.16"
pytest = "^7.4.2"
pytest-datadir = "^1.4.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"

[tool.poetry.extras]
core = ["summon-tasks"]

[tool.poetry.plugins.summon]
summon_python = "summon_python.plugin"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.summon.plugins.python]
test-modules = ['tests']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
